--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -10,11 +10,11 @@ metadata:
 spec:
   tls:
     - hosts:
-        - k8simm.de.com
-        - www.k8simm.de.com
-      secretName: k8simm.de-com
+        - k8simm.de
+        - www.k8simm.de
+      secretName: k8simm-de
   rules:
-    - host: k8simm.de.com
+    - host: k8simm.de
       http:
         paths:
           - path: /
@@ -25,7 +25,7 @@ spec:
             backend:
               serviceName: server-cluster-ip-service
               servicePort: 5000
-    - host: www.k8simm.de.com
+    - host: www.k8simm.de
       http:
         paths:
           - path: /
